--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "libft"]
-	path = libft
-	url = git@github.com:abdelbenamara/Libft.git
-	branch = main
+[submodule "pipex-tester"]
+	path = pipex-tester
+	url = https://github.com/vfurmane/pipex-tester.git
